tests/baselines/reference/for-of15.errors.txt
tests/cases/conformance/es6/for-ofStatements/for-of15.ts(2,11): error TS2490: The object returned by the next method of the iterator must have a 'value' property.


==== tests/cases/conformance/es6/for-ofStatements/for-of15.ts (1 errors) ====
    var v: string;
    for (v of new StringIterator) { } // Should fail
              ~~~~~~~~~~~~~~~~~~
!!! error TS2490: The object returned by the next method of the iterator must have a 'value' property.
    
    class StringIterator {
        next() {
            return "";
        }
        [Symbol.iterator]() {
            return this;
        }
    }